[project]
authors = [{name = "AndBoyS", email = "andboyxd@gmail.com"}]
dependencies = [
  "click>=8.2.1",
  "dash>=3.2.0",
  "numpy>=2.3.2",
  "pandas>=2.3.2",
  "plotly>=6.3.0",
  "tomli-w>=1.2.0",
]
description = "Add your description here"
name = "expfreeze"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[dependency-groups]
dev = [
  "mypy==1.16.1",
  "plotly-stubs>=0.0.6",
  "ruff>=0.12.11",
]

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.8.14,<0.9.0"]

[tool.uv.build-backend]
module-name = "src"
module-root = ""

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
  "E501",   # Line too long
  "ISC001",
  "PTH123", # open should be replaced by Path.open
  "RET504", # creating and returning variable
  # too many x
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0914",
  "PLR0915",
  "PLR0916",
  "PLR0917",
]
select = [
  "ASYNC",
  "B",     # flake8-bugbear
  "C4",    # comprehensions
  "E",     # pycodestyle
  "ERA",   # remove commented code
  "F",     # Pyflakes
  "FURB",
  "I",     # isort
  "ISC",   # implicit string concat
  "NPY",   # numpy
  "PD",    # pandas
  "PERF",
  "PGH",   # use specific error code for lint ignores
  "PL",    # pylint
  "PT",    # pytest
  "PTH",   # pathlib
  "RET",   # return
  "SIM",   # flake8-simplify
  "UP",    # pyupgrade
]

[tool.mypy]
allow_redefinition = true
disallow_untyped_calls = false
follow_untyped_imports = true
no_implicit_reexport = false
strict = true

[project.scripts]
save_exp = "src.cli:save_exp"
